--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,7 +11,7 @@ unbind '"'
 bind - split-window -v
 
 unbind r
-bind r source-file ~/.config/nvim/tmux/.tmux.conf
+bind r run "cp ~/.config/nvim/tmux/.tmux.conf ~/.tmux.conf; tmux source-file ~/.config/nvim/tmux/.tmux.conf"
 
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
@@ -21,6 +21,11 @@ bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
 set -g mouse on
+set-window-option -g mode-keys vi
+# Copy and Selecting text
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 #tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
@@ -46,6 +51,16 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
+# Color theme for tmux
+set -g @plugin 'jimeh/tmux-themepack'
+# Autosave session every 15min
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/nvim/tmux/plugins/tpm/tpm'
+
+set -g @themepack 'powerline/default/cyan' 
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+
+run '~/.tmux/plugins/tpm/tpm'
 
